<resources>
    <string name="app_name">Uber Rider</string>
    <string name="move_with_safety">Move with safety</string>
    <string name="get_started">Get started</string>
    <string name="please_fill_this_form">Please fill this form</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="you_already_have_account_sign_in">You already have an account? Sign in</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="you_don_t_have_an_account_yet_register">You don\'t have an account yet? register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm">Confirm</string>
    <string name="update">Update</string>
    <string name="log_out">Log out</string>
    <string name="account_name">Account name</string>
    <string name="re_authenticate">Re-authenticate</string>
    <string name="for_security_reasons_you_need_to_provide_your_current_email_and_password_to_edit_your_account">For security reasons you need to provide your current email and password to edit your account</string>
    <string name="current_email">Current email</string>
    <string name="authenticate">Authenticate</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="payment_by_cash">Payment by cash</string>
    <string name="confirm_uber">Confirm Uber</string>
    <string name="cancel_uber">Cancel Uber</string>
    <string name="we_are_looking_for_a_ride_for_you_please_wait">We are looking for a ride for you, please wait</string>
</resources>