<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="24dp"
    android:paddingHorizontal="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/payment_by_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/uber_move"
        android:text="@string/payment_by_cash"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_uber"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green_600"
        android:fontFamily="@font/uber_move"
        android:text="@string/confirm_uber"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/payment_by_cash" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_uber"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/red_600"
        android:fontFamily="@font/uber_move"
        android:text="@string/cancel_uber"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/confirm_uber" />
</androidx.constraintlayout.widget.ConstraintLayout>