<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fadingEdge="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/enter_email_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/uber_move"
            android:text="@string/please_fill_this_form"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="83dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_email_password_text"
            android:layout_marginTop="24dp"
            android:hint="@string/full_name"
            style="@style/Widget.UberRider.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/uber_move"
                android:inputType="textPersonName"
                android:textCursorDrawable="@drawable/black_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/full_name_text_input"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            style="@style/Widget.UberRider.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/uber_move"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/black_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text_input"
            android:layout_marginTop="16dp"
            android:hint="@string/phone_number"
            style="@style/Widget.UberRider.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/uber_move"
                android:inputType="phone"
                android:textCursorDrawable="@drawable/black_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_text_input"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:endIconDrawable="@drawable/custom_eye"
            app:endIconMode="password_toggle"
            style="@style/Widget.UberRider.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/uber_move"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/black_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_text_input"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/custom_eye"
            style="@style/Widget.UberRider.TextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/uber_move"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/black_cursor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:fontFamily="@font/uber_move"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"/>

        <ProgressBar
            android:id="@+id/registerProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/registerButton"
            app:layout_constraintBottom_toBottomOf="@+id/registerButton"
            android:layout_marginTop="16dp"
            android:indeterminateTint="@color/black"
            android:visibility="invisible"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sing_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerButton"
            android:layout_marginTop="16dp"
            android:text="@string/you_already_have_account_sign_in"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:fontFamily="@font/uber_move"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
