<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="16dp">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:fontFamily="@font/uber_move"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        style="@style/Widget.UberRider.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uber_move"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/black_cursor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_input"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        style="@style/Widget.UberRider.TextInputLayout"
        app:endIconDrawable="@drawable/custom_eye"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uber_move"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/black_cursor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/password_text_input"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:fontFamily="@font/uber_move"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginButton"
        app:layout_constraintBottom_toBottomOf="@+id/loginButton"
        android:fontFamily="@font/uber_move"/>

    <ProgressBar
        android:id="@+id/login_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:indeterminateTint="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintTop_toTopOf="@id/loginButton"
        app:layout_constraintBottom_toBottomOf="@id/loginButton"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        android:layout_marginTop="24dp"
        android:text="@string/you_don_t_have_an_account_yet_register"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:fontFamily="@font/uber_move"/>

</androidx.constraintlayout.widget.ConstraintLayout>