<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#3B6CE8"
    android:paddingBottom="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@color/white"
        android:fontFamily="@font/uber_move"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/intro_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/driver_rider_mask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro_image"
        android:text="@string/move_with_safety"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:fontFamily="@font/uber_move"
        android:textAlignment="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_started_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/get_started"
        android:drawableEnd="@drawable/arrow_next_icon"
        android:fontFamily="@font/uber_move"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>