<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_arrow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back_icon"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reset_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/back_arrow_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/reset_password"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:fontFamily="@font/uber_move"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_password_text"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        style="@style/Widget.UberRider.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uber_move"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/black_cursor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/email_text_input"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        android:fontFamily="@font/uber_move"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"/>

    <ProgressBar
        android:id="@+id/reset_password_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmButton"
        android:layout_marginTop="16dp"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>